test/tasty/neg-pipelined/src-2/tastytest/TestBounds_fail.scala
package tastytest

import lib.Bounds

object TestBounds extends scala.App {
  Bounds.m_ARRAY(Array(23)) // error
  Bounds.m_ARRAY(Array("abc")) // error
  Bounds.m(23) // error
  Bounds.m("abc") // error
}
